--- a/login.html
+++ b/login.html
@@ -10,8 +10,11 @@
 <div class="login-container">
   <div class="login-box">
     <h1>Gang and Narcotics Division</h1>
-    <input type="text" id="username" placeholder="Логин">
-    <input type="password" id="password" placeholder="Пароль">
+    <div class="terminal">
+      <span id="cursor"></span>
+      <input type="text" id="username" placeholder="Логин">
+      <input type="password" id="password" placeholder="Пароль">
+    </div>
     <button onclick="login()">Войти</button>
     <p id="error"></p>
   </div>
